vendor/bicycl-rs-sys/capi/include/bicycl_capi.h

#define BICYCL_CAPI_VERSION 0x00010100u
typedef enum bicycl_status_t {
  BICYCL_OK = 0,
  BICYCL_ERR_NULL_PTR = 1,
  BICYCL_ERR_INVALID_ARGUMENT = 2,
  BICYCL_ERR_ALLOCATION_FAILED = 3,
  BICYCL_ERR_INTERNAL = 4,
  BICYCL_ERR_BUFFER_TOO_SMALL = 5,
  BICYCL_ERR_PARSE = 6,
  BICYCL_ERR_INVALID_STATE = 7,
  BICYCL_ERR_VERIFY_FAILED = 8,
  BICYCL_ERR_PROTOCOL_ABORT = 9,
  BICYCL_ERR_CORE = 90,
  BICYCL_ERR_PAILLIER = 100,
  BICYCL_ERR_JOYE_LIBERT = 101,
  BICYCL_ERR_CL_HSMQK = 102,
  BICYCL_ERR_CL_HSM2K = 103,
  BICYCL_ERR_ECDSA = 104,
  BICYCL_ERR_TWO_PARTY_ECDSA = 105,
  BICYCL_ERR_CL_THRESHOLD = 106,
  BICYCL_ERR_CL_DLOG = 107,
  BICYCL_ERR_THRESHOLD_ECDSA = 108,
} bicycl_status_t;
typedef struct bicycl_context_t bicycl_context_t;
typedef struct bicycl_randgen_t bicycl_randgen_t;
typedef struct bicycl_classgroup_t bicycl_classgroup_t;
typedef struct bicycl_qfi_t bicycl_qfi_t;
typedef struct bicycl_paillier_t bicycl_paillier_t;
typedef struct bicycl_paillier_sk_t bicycl_paillier_sk_t;
typedef struct bicycl_paillier_pk_t bicycl_paillier_pk_t;
typedef struct bicycl_paillier_ct_t bicycl_paillier_ct_t;
typedef struct bicycl_joye_libert_t bicycl_joye_libert_t;
typedef struct bicycl_joye_libert_sk_t bicycl_joye_libert_sk_t;
typedef struct bicycl_joye_libert_pk_t bicycl_joye_libert_pk_t;
typedef struct bicycl_joye_libert_ct_t bicycl_joye_libert_ct_t;
typedef struct bicycl_cl_hsmqk_t bicycl_cl_hsmqk_t;
typedef struct bicycl_cl_hsmqk_sk_t bicycl_cl_hsmqk_sk_t;
typedef struct bicycl_cl_hsmqk_pk_t bicycl_cl_hsmqk_pk_t;
typedef struct bicycl_cl_hsmqk_ct_t bicycl_cl_hsmqk_ct_t;
typedef struct bicycl_cl_hsm2k_t bicycl_cl_hsm2k_t;
typedef struct bicycl_cl_hsm2k_sk_t bicycl_cl_hsm2k_sk_t;
typedef struct bicycl_cl_hsm2k_pk_t bicycl_cl_hsm2k_pk_t;
typedef struct bicycl_cl_hsm2k_ct_t bicycl_cl_hsm2k_ct_t;
typedef struct bicycl_ecdsa_t bicycl_ecdsa_t;
typedef struct bicycl_ecdsa_sk_t bicycl_ecdsa_sk_t;
typedef struct bicycl_ecdsa_pk_t bicycl_ecdsa_pk_t;
typedef struct bicycl_ecdsa_sig_t bicycl_ecdsa_sig_t;
typedef struct bicycl_two_party_ecdsa_session_t bicycl_two_party_ecdsa_session_t;
typedef struct bicycl_cl_dlog_session_t bicycl_cl_dlog_session_t;
typedef struct bicycl_threshold_ecdsa_session_t bicycl_threshold_ecdsa_session_t;
typedef struct bicycl_cl_dlog_message_t bicycl_cl_dlog_message_t;
uint32_t bicycl_get_abi_version(void);
const char *bicycl_get_version(void);
const char *bicycl_status_message(bicycl_status_t status);
bicycl_status_t bicycl_context_new(bicycl_context_t **out_ctx);
void bicycl_context_free(bicycl_context_t *ctx);
const char *bicycl_context_last_error(const bicycl_context_t *ctx);
void bicycl_context_clear_error(bicycl_context_t *ctx);
void bicycl_zeroize(void *ptr, size_t len);
bicycl_status_t bicycl_randgen_new_from_seed_decimal(
    bicycl_context_t *ctx,
    const char *seed_decimal,
    bicycl_randgen_t **out_randgen);
void bicycl_randgen_free(bicycl_randgen_t *randgen);
bicycl_status_t bicycl_classgroup_new_from_discriminant_decimal(
    bicycl_context_t *ctx,
    const char *discriminant_decimal,
    bicycl_classgroup_t **out_classgroup);
void bicycl_classgroup_free(bicycl_classgroup_t *classgroup);
bicycl_status_t bicycl_classgroup_one(
    bicycl_context_t *ctx,
    const bicycl_classgroup_t *classgroup,
    bicycl_qfi_t **out_qfi);
bicycl_status_t bicycl_classgroup_nudupl(
    bicycl_context_t *ctx,
    const bicycl_classgroup_t *classgroup,
    const bicycl_qfi_t *input,
    bicycl_qfi_t **out_qfi);
void bicycl_qfi_free(bicycl_qfi_t *qfi);
bicycl_status_t bicycl_qfi_is_one(
    bicycl_context_t *ctx,
    const bicycl_qfi_t *qfi,
    int *out_is_one);
bicycl_status_t bicycl_qfi_discriminant_decimal(
    bicycl_context_t *ctx,
    const bicycl_qfi_t *qfi,
    char *out_buf,
    size_t *inout_len);
// ── QFI additional ──────────────────────────────────────────────────────
bicycl_status_t bicycl_qfi_new_from_abc_decimal(
    bicycl_context_t *ctx, const char *a, const char *b, const char *c,
    bicycl_qfi_t **out);
bicycl_status_t bicycl_qfi_a_decimal(
    bicycl_context_t *ctx, const bicycl_qfi_t *qfi, char *out_buf, size_t *inout_len);
bicycl_status_t bicycl_qfi_b_decimal(
    bicycl_context_t *ctx, const bicycl_qfi_t *qfi, char *out_buf, size_t *inout_len);
bicycl_status_t bicycl_qfi_c_decimal(
    bicycl_context_t *ctx, const bicycl_qfi_t *qfi, char *out_buf, size_t *inout_len);
bicycl_status_t bicycl_qfi_equal(
    bicycl_context_t *ctx, const bicycl_qfi_t *a, const bicycl_qfi_t *b, int *out);
bicycl_status_t bicycl_qfi_neg(
    bicycl_context_t *ctx, const bicycl_qfi_t *qfi, bicycl_qfi_t **out);
bicycl_status_t bicycl_qfi_lift_decimal(
    bicycl_context_t *ctx, bicycl_qfi_t *qfi, const char *conductor_decimal);
bicycl_status_t bicycl_qfi_to_maximal_order_decimal(
    bicycl_context_t *ctx, bicycl_qfi_t *qfi,
    const char *conductor_decimal, const char *DeltaK_decimal, int to_neg);
// ── ClassGroup additional ────────────────────────────────────────────────
bicycl_status_t bicycl_classgroup_discriminant_decimal(
    bicycl_context_t *ctx, const bicycl_classgroup_t *cg, char *out_buf, size_t *inout_len);
bicycl_status_t bicycl_classgroup_nucomp(
    bicycl_context_t *ctx, const bicycl_classgroup_t *cg,
    const bicycl_qfi_t *f1, const bicycl_qfi_t *f2, bicycl_qfi_t **out);
bicycl_status_t bicycl_classgroup_nucompinv(
    bicycl_context_t *ctx, const bicycl_classgroup_t *cg,
    const bicycl_qfi_t *f1, const bicycl_qfi_t *f2, bicycl_qfi_t **out);
bicycl_status_t bicycl_classgroup_nupow_decimal(
    bicycl_context_t *ctx, const bicycl_classgroup_t *cg,
    const bicycl_qfi_t *f, const char *n_decimal, bicycl_qfi_t **out);
bicycl_status_t bicycl_classgroup_nupow2_decimal(
    bicycl_context_t *ctx, const bicycl_classgroup_t *cg,
    const bicycl_qfi_t *f0, const char *n0_decimal,
    const bicycl_qfi_t *f1, const char *n1_decimal, bicycl_qfi_t **out);
bicycl_status_t bicycl_classgroup_primeform_decimal(
    bicycl_context_t *ctx, const bicycl_classgroup_t *cg,
    const char *p_decimal, bicycl_qfi_t **out);
// ── CL_HSMqk parameters ──────────────────────────────────────────────────
bicycl_status_t bicycl_cl_hsmqk_q_decimal(
    bicycl_context_t *ctx, const bicycl_cl_hsmqk_t *cl, char *out_buf, size_t *inout_len);
bicycl_status_t bicycl_cl_hsmqk_p_decimal(
    bicycl_context_t *ctx, const bicycl_cl_hsmqk_t *cl, char *out_buf, size_t *inout_len);
bicycl_status_t bicycl_cl_hsmqk_M_decimal(
    bicycl_context_t *ctx, const bicycl_cl_hsmqk_t *cl, char *out_buf, size_t *inout_len);
bicycl_status_t bicycl_cl_hsmqk_DeltaK_decimal(
    bicycl_context_t *ctx, const bicycl_cl_hsmqk_t *cl, char *out_buf, size_t *inout_len);
bicycl_status_t bicycl_cl_hsmqk_Delta_decimal(
    bicycl_context_t *ctx, const bicycl_cl_hsmqk_t *cl, char *out_buf, size_t *inout_len);
bicycl_status_t bicycl_cl_hsmqk_secretkey_bound_decimal(
    bicycl_context_t *ctx, const bicycl_cl_hsmqk_t *cl, char *out_buf, size_t *inout_len);
bicycl_status_t bicycl_cl_hsmqk_Cl_DeltaK(
    bicycl_context_t *ctx, const bicycl_cl_hsmqk_t *cl, bicycl_classgroup_t **out);
bicycl_status_t bicycl_cl_hsmqk_Cl_Delta(
    bicycl_context_t *ctx, const bicycl_cl_hsmqk_t *cl, bicycl_classgroup_t **out);
bicycl_status_t bicycl_cl_hsmqk_h(
    bicycl_context_t *ctx, const bicycl_cl_hsmqk_t *cl, bicycl_qfi_t **out);
// ── CL_HSMqk subgroup operations ─────────────────────────────────────────
bicycl_status_t bicycl_cl_hsmqk_power_of_h_decimal(
    bicycl_context_t *ctx, const bicycl_cl_hsmqk_t *cl,
    const char *e_decimal, bicycl_qfi_t **out);
bicycl_status_t bicycl_cl_hsmqk_power_of_f_decimal(
    bicycl_context_t *ctx, const bicycl_cl_hsmqk_t *cl,
    const char *m_decimal, bicycl_qfi_t **out);
bicycl_status_t bicycl_cl_hsmqk_dlog_in_F(
    bicycl_context_t *ctx, const bicycl_cl_hsmqk_t *cl,
    const bicycl_qfi_t *fm, char *out_buf, size_t *inout_len);
bicycl_status_t bicycl_cl_hsmqk_from_Cl_DeltaK_to_Cl_Delta(
    bicycl_context_t *ctx, const bicycl_cl_hsmqk_t *cl, bicycl_qfi_t *f);
// ── CL_HSMqk key/ciphertext access ───────────────────────────────────────
bicycl_status_t bicycl_cl_hsmqk_pk_elt(
    bicycl_context_t *ctx, const bicycl_cl_hsmqk_pk_t *pk, bicycl_qfi_t **out);
bicycl_status_t bicycl_cl_hsmqk_pk_new_from_qfi(
    bicycl_context_t *ctx, const bicycl_cl_hsmqk_t *cl,
    const bicycl_qfi_t *qfi, bicycl_cl_hsmqk_pk_t **out);
bicycl_status_t bicycl_cl_hsmqk_ct_c1(
    bicycl_context_t *ctx, const bicycl_cl_hsmqk_ct_t *ct, bicycl_qfi_t **out);
bicycl_status_t bicycl_cl_hsmqk_ct_c2(
    bicycl_context_t *ctx, const bicycl_cl_hsmqk_ct_t *ct, bicycl_qfi_t **out);
bicycl_status_t bicycl_cl_hsmqk_ct_new_from_c1c2(
    bicycl_context_t *ctx, const bicycl_qfi_t *c1, const bicycl_qfi_t *c2,
    bicycl_cl_hsmqk_ct_t **out);