vendor/bicycl-rs-sys/src/lib.rs

#![deny(unsafe_op_in_unsafe_fn)]

use core::ffi::{c_char, c_int, c_void};

#[allow(non_camel_case_types)]
#[non_exhaustive]
#[repr(C)]
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub enum bicycl_status_t {
    BICYCL_OK = 0,
    BICYCL_ERR_NULL_PTR = 1,
    BICYCL_ERR_INVALID_ARGUMENT = 2,
    BICYCL_ERR_ALLOCATION_FAILED = 3,
    BICYCL_ERR_INTERNAL = 4,
    BICYCL_ERR_BUFFER_TOO_SMALL = 5,
    BICYCL_ERR_PARSE = 6,
    BICYCL_ERR_INVALID_STATE = 7,
    BICYCL_ERR_VERIFY_FAILED = 8,
    BICYCL_ERR_PROTOCOL_ABORT = 9,
    BICYCL_ERR_CORE = 90,
    BICYCL_ERR_PAILLIER = 100,
    BICYCL_ERR_JOYE_LIBERT = 101,
    BICYCL_ERR_CL_HSMQK = 102,
    BICYCL_ERR_CL_HSM2K = 103,
    BICYCL_ERR_ECDSA = 104,
    BICYCL_ERR_TWO_PARTY_ECDSA = 105,
    BICYCL_ERR_CL_THRESHOLD = 106,
    BICYCL_ERR_CL_DLOG = 107,
    BICYCL_ERR_THRESHOLD_ECDSA = 108,
}

#[repr(C)]
pub struct bicycl_context_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct bicycl_randgen_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct bicycl_classgroup_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct bicycl_qfi_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct bicycl_paillier_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct bicycl_paillier_sk_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct bicycl_paillier_pk_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct bicycl_paillier_ct_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct bicycl_joye_libert_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct bicycl_joye_libert_sk_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct bicycl_joye_libert_pk_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct bicycl_joye_libert_ct_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct bicycl_cl_hsmqk_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct bicycl_cl_hsmqk_sk_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct bicycl_cl_hsmqk_pk_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct bicycl_cl_hsmqk_ct_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct bicycl_cl_hsm2k_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct bicycl_cl_hsm2k_sk_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct bicycl_cl_hsm2k_pk_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct bicycl_cl_hsm2k_ct_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct bicycl_ecdsa_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct bicycl_ecdsa_sk_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct bicycl_ecdsa_pk_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct bicycl_ecdsa_sig_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct bicycl_two_party_ecdsa_session_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct bicycl_cl_dlog_session_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct bicycl_threshold_ecdsa_session_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct bicycl_cl_dlog_message_t {
    _private: [u8; 0],
}

pub const BICYCL_CAPI_VERSION: u32 = 0x0001_0100;

unsafe extern "C" {
    pub fn bicycl_get_abi_version() -> u32;
    pub fn bicycl_get_version() -> *const c_char;
    pub fn bicycl_status_message(status: bicycl_status_t) -> *const c_char;

    pub fn bicycl_context_new(out_ctx: *mut *mut bicycl_context_t) -> bicycl_status_t;
    pub fn bicycl_context_free(ctx: *mut bicycl_context_t);
    pub fn bicycl_context_last_error(ctx: *const bicycl_context_t) -> *const c_char;
    pub fn bicycl_context_clear_error(ctx: *mut bicycl_context_t);

    pub fn bicycl_zeroize(ptr: *mut c_void, len: usize);

    pub fn bicycl_randgen_new_from_seed_decimal(
        ctx: *mut bicycl_context_t,
        seed_decimal: *const c_char,
        out_randgen: *mut *mut bicycl_randgen_t,
    ) -> bicycl_status_t;
    pub fn bicycl_randgen_free(randgen: *mut bicycl_randgen_t);

    pub fn bicycl_classgroup_new_from_discriminant_decimal(
        ctx: *mut bicycl_context_t,
        discriminant_decimal: *const c_char,
        out_classgroup: *mut *mut bicycl_classgroup_t,
    ) -> bicycl_status_t;
    pub fn bicycl_classgroup_free(classgroup: *mut bicycl_classgroup_t);

    pub fn bicycl_classgroup_one(
        ctx: *mut bicycl_context_t,
        classgroup: *const bicycl_classgroup_t,
        out_qfi: *mut *mut bicycl_qfi_t,
    ) -> bicycl_status_t;

    pub fn bicycl_classgroup_nudupl(
        ctx: *mut bicycl_context_t,
        classgroup: *const bicycl_classgroup_t,
        input: *const bicycl_qfi_t,
        out_qfi: *mut *mut bicycl_qfi_t,
    ) -> bicycl_status_t;

    pub fn bicycl_qfi_free(qfi: *mut bicycl_qfi_t);
    pub fn bicycl_qfi_is_one(
        ctx: *mut bicycl_context_t,
        qfi: *const bicycl_qfi_t,
        out_is_one: *mut c_int,
    ) -> bicycl_status_t;
    pub fn bicycl_qfi_discriminant_decimal(
        ctx: *mut bicycl_context_t,
        qfi: *const bicycl_qfi_t,
        out_buf: *mut c_char,
        inout_len: *mut usize,
    ) -> bicycl_status_t;

    // ── QFI additional ──────────────────────────────────────────────────────
    pub fn bicycl_qfi_new_from_abc_decimal(
        ctx: *mut bicycl_context_t,
        a: *const c_char,
        b: *const c_char,
        c: *const c_char,
        out: *mut *mut bicycl_qfi_t,
    ) -> bicycl_status_t;

    pub fn bicycl_qfi_a_decimal(
        ctx: *mut bicycl_context_t,
        qfi: *const bicycl_qfi_t,
        out_buf: *mut c_char,
        inout_len: *mut usize,
    ) -> bicycl_status_t;

    pub fn bicycl_qfi_b_decimal(
        ctx: *mut bicycl_context_t,
        qfi: *const bicycl_qfi_t,
        out_buf: *mut c_char,
        inout_len: *mut usize,
    ) -> bicycl_status_t;

    pub fn bicycl_qfi_c_decimal(
        ctx: *mut bicycl_context_t,
        qfi: *const bicycl_qfi_t,
        out_buf: *mut c_char,
        inout_len: *mut usize,
    ) -> bicycl_status_t;

    pub fn bicycl_qfi_equal(
        ctx: *mut bicycl_context_t,
        a: *const bicycl_qfi_t,
        b: *const bicycl_qfi_t,
        out: *mut c_int,
    ) -> bicycl_status_t;

    pub fn bicycl_qfi_neg(
        ctx: *mut bicycl_context_t,
        qfi: *const bicycl_qfi_t,
        out: *mut *mut bicycl_qfi_t,
    ) -> bicycl_status_t;

    pub fn bicycl_qfi_lift_decimal(
        ctx: *mut bicycl_context_t,
        qfi: *mut bicycl_qfi_t,
        conductor_decimal: *const c_char,
    ) -> bicycl_status_t;

    pub fn bicycl_qfi_to_maximal_order_decimal(
        ctx: *mut bicycl_context_t,
        qfi: *mut bicycl_qfi_t,
        conductor_decimal: *const c_char,
        delta_k_decimal: *const c_char,
        to_neg: c_int,
    ) -> bicycl_status_t;

    // ── ClassGroup additional ────────────────────────────────────────────────
    pub fn bicycl_classgroup_discriminant_decimal(
        ctx: *mut bicycl_context_t,
        cg: *const bicycl_classgroup_t,
        out_buf: *mut c_char,
        inout_len: *mut usize,
    ) -> bicycl_status_t;

    pub fn bicycl_classgroup_nucomp(
        ctx: *mut bicycl_context_t,
        cg: *const bicycl_classgroup_t,
        f1: *const bicycl_qfi_t,
        f2: *const bicycl_qfi_t,
        out: *mut *mut bicycl_qfi_t,
    ) -> bicycl_status_t;

    pub fn bicycl_classgroup_nucompinv(
        ctx: *mut bicycl_context_t,
        cg: *const bicycl_classgroup_t,
        f1: *const bicycl_qfi_t,
        f2: *const bicycl_qfi_t,
        out: *mut *mut bicycl_qfi_t,
    ) -> bicycl_status_t;

    pub fn bicycl_classgroup_nupow_decimal(
        ctx: *mut bicycl_context_t,
        cg: *const bicycl_classgroup_t,
        f: *const bicycl_qfi_t,
        n_decimal: *const c_char,
        out: *mut *mut bicycl_qfi_t,
    ) -> bicycl_status_t;

    pub fn bicycl_classgroup_nupow2_decimal(
        ctx: *mut bicycl_context_t,
        cg: *const bicycl_classgroup_t,
        f0: *const bicycl_qfi_t,
        n0_decimal: *const c_char,
        f1: *const bicycl_qfi_t,
        n1_decimal: *const c_char,
        out: *mut *mut bicycl_qfi_t,
    ) -> bicycl_status_t;

    pub fn bicycl_classgroup_primeform_decimal(
        ctx: *mut bicycl_context_t,
        cg: *const bicycl_classgroup_t,
        p_decimal: *const c_char,
        out: *mut *mut bicycl_qfi_t,
    ) -> bicycl_status_t;

    // ── CL_HSMqk parameters ──────────────────────────────────────────────────
    pub fn bicycl_cl_hsmqk_q_decimal(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsmqk_t,
        out_buf: *mut c_char,
        inout_len: *mut usize,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsmqk_p_decimal(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsmqk_t,
        out_buf: *mut c_char,
        inout_len: *mut usize,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsmqk_M_decimal(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsmqk_t,
        out_buf: *mut c_char,
        inout_len: *mut usize,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsmqk_DeltaK_decimal(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsmqk_t,
        out_buf: *mut c_char,
        inout_len: *mut usize,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsmqk_Delta_decimal(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsmqk_t,
        out_buf: *mut c_char,
        inout_len: *mut usize,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsmqk_secretkey_bound_decimal(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsmqk_t,
        out_buf: *mut c_char,
        inout_len: *mut usize,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsmqk_Cl_DeltaK(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsmqk_t,
        out: *mut *mut bicycl_classgroup_t,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsmqk_Cl_Delta(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsmqk_t,
        out: *mut *mut bicycl_classgroup_t,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsmqk_h(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsmqk_t,
        out: *mut *mut bicycl_qfi_t,
    ) -> bicycl_status_t;

    // ── CL_HSMqk subgroup operations ─────────────────────────────────────────
    pub fn bicycl_cl_hsmqk_power_of_h_decimal(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsmqk_t,
        e_decimal: *const c_char,
        out: *mut *mut bicycl_qfi_t,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsmqk_power_of_f_decimal(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsmqk_t,
        m_decimal: *const c_char,
        out: *mut *mut bicycl_qfi_t,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsmqk_dlog_in_F(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsmqk_t,
        fm: *const bicycl_qfi_t,
        out_buf: *mut c_char,
        inout_len: *mut usize,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsmqk_from_Cl_DeltaK_to_Cl_Delta(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsmqk_t,
        f: *mut bicycl_qfi_t,
    ) -> bicycl_status_t;

    // ── CL_HSMqk key/ciphertext access ───────────────────────────────────────
    pub fn bicycl_cl_hsmqk_pk_elt(
        ctx: *mut bicycl_context_t,
        pk: *const bicycl_cl_hsmqk_pk_t,
        out: *mut *mut bicycl_qfi_t,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsmqk_pk_new_from_qfi(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsmqk_t,
        qfi: *const bicycl_qfi_t,
        out: *mut *mut bicycl_cl_hsmqk_pk_t,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsmqk_ct_c1(
        ctx: *mut bicycl_context_t,
        ct: *const bicycl_cl_hsmqk_ct_t,
        out: *mut *mut bicycl_qfi_t,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsmqk_ct_c2(
        ctx: *mut bicycl_context_t,
        ct: *const bicycl_cl_hsmqk_ct_t,
        out: *mut *mut bicycl_qfi_t,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsmqk_ct_new_from_c1c2(
        ctx: *mut bicycl_context_t,
        c1: *const bicycl_qfi_t,
        c2: *const bicycl_qfi_t,
        out: *mut *mut bicycl_cl_hsmqk_ct_t,
    ) -> bicycl_status_t;
